# langgraph-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  build.bat  build.sh  build.spec  build_desktop.bat  build_desktop.sh  desktop.py  desktop.spec  langgraph_agent.spec  main.py  pyproject.toml
app/agent_flow/: __init__.py  card_subgraph.py  edge_router.py  exceptions.py  execution_context.py  flow_change_tracker.py  flow_context.py  flow_event.py  graph_builder.py  handler_registry.py  loop_subgraph.py  mcp_manager.py  message_buffer.py  mysql_checkpointer.py  remote_tool_builder.py  subgraph_builder.py  subgraph_runner.py  tool_output_truncate.py  tool_resolver.py  variable_resolver.py  ws_tool_context.py
app/api/: agenda_api.py  agent_api.py  ai_flow_api.py  ai_model_api.py  ai_provider_api.py  auth_api.py  base_api.py  example_api.py  execution_api.py  file_api.py  flow_api.py  flow_edge_api.py  flow_node_api.py  flow_snapshot_api.py  flow_template_api.py  global_config_api.py  knowledge_api.py  knowledge_document_api.py  knowledge_insight_api.py  marketplace_api.py  mcp_server_api.py  memory_api.py  scheduled_task_api.py  skill_api.py  statistics_api.py  webhook_api.py  ws_api.py  ws_gateway_api.py  ws_trigger_api.py
app/config/: app_setup.py  build_utils.py  database.py  lifespan.py  logging_config.py  settings.py  tray.py  version.py
app/constants/: node_types.py
app/middleware/: __init__.py  auth_middleware.py  exception_middleware.py  security_middleware.py
app/models/: agenda.py  agent_message.py  (+30 more)
docker/: docker-compose-env.yml  docker-compose.yml  stop-server.sh
docs/: ws-gateway.md
frontend/: .prettierignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
scripts/: build.py  generate_static_imports.py  migrate_agenda.py
(+297 files in other folders)
