[project]
name = "langgraph_agent"
version = "0.1.1"
description = ""
authors = [
    {name = "wgb",email = "1522267053@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.40.0,<0.50.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langgraph (>=1.0.0,<2.0.0)",
    "langchain-openai (>=1.0.0,<2.0.0)",
    "python-docx (>=1.2.0,<2.2.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "sse-starlette (>=2.0.0,<3.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-deepseek (>=1.0.1,<2.0.0)",
    "langchain-anthropic (>=0.3.0,<1.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "langchain-mcp-adapters (>=0.2.1,<0.3.0)",
    "dashscope (>=1.25.14,<2.0.0)",
    "chromadb (>=0.6.0,<=1.5.5)",
    "ruff (>=0.15.7,<0.16.0)",
    "simpleeval (>=1.0.7,<2.0.0)",
    "pyinstaller (>=6.19.0,<7.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pymupdf (>=1.24.0,<2.0.0)",
    "pdfplumber (>=0.11.0,<0.12.0)",
    "apscheduler (>=3.10.0,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "restrictedpython (>=8.1,<9.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

#使用腾讯源
[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"
# 中国科学技术大学 USTC 镜像站
[[tool.poetry.source]]
name = "ustc"
url = "https://mirrors.ustc.edu.cn/pypi/simple/"
priority = "supplemental"
[dependency-groups]
dev = [
    "nuitka (>=4.1.2,<5.0.0)"
]
